Fix confetti overflow

--- a/apps/client/src/shared/ui/VictoryWindow/VictoryWindow.module.css
+++ b/apps/client/src/shared/ui/VictoryWindow/VictoryWindow.module.css
@@ -1,6 +1,7 @@
 .container {
   position: absolute;
 
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
